# sodo

./: Cargo.toml  LICENSE.md  Makefile  README.md  pyproject.toml
sodo/: Cargo.toml
sodo-wasm/: Cargo.toml  LICENSE
sodo-wasm/src/: lib.rs
sodo/examples/: basic.rs  generate.rs  solve.rs
sodo/src/: lib.rs  sodo.rs  solver.rs  strategy.rs
